--- a/Rebus.SqlServer/Rebus.SqlServer.csproj
+++ b/Rebus.SqlServer/Rebus.SqlServer.csproj
@@ -13,7 +13,7 @@
     <PackageDescription>Microsoft SQL Server-based persistence for Rebus</PackageDescription>
     <Copyright>Copyright 2012-2018</Copyright>
     <PackageTags>rebus queue messaging service bus sql-server sqlserver mssql sql</PackageTags>
-    <PackageIconUrl>https://github.com/mookid8000/Rebus/raw/master/artwork/little_rebusbus2_copy-200x200.png</PackageIconUrl>
+    <PackageIcon>little_rebusbus2_copy-200x200.png</PackageIcon>
     <RepositoryUrl>https://github.com/rebus-org/Rebus</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
   </PropertyGroup>
@@ -61,4 +61,7 @@
   <Target BeforeTargets="PreBuildEvent" Name="PreBuild">
     <Exec Command="$(ProjectDir)..\scripts\patch_assemblyinfo.cmd $(ProjectDir)" />
   </Target>
+  <ItemGroup>
+    <None Include="..\scripts\little_rebusbus2_copy-200x200.png" Pack="true" PackagePath="\"/>
+  </ItemGroup>
 </Project>
